--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@babel/polyfill": "^7.12.1",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/styles": "^4.11.3",
     "bootstrap": "^4.6.0",
     "fontsource-roboto": "^4.0.0",
     "jquery": "^3.5.1",
