--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "START_SET",
   "private": "true",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --mode development",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --mode development | json-server --watch db/dataBase.json",
     "build": "cross-env NODE_ENV=production webpack --mode production"
   },
   "browserslist": ">0.25%, not dead",
@@ -24,6 +24,7 @@
     "file-loader": "^6.2.0",
     "html-loader": "^1.3.2",
     "html-webpack-plugin": "^4.5.1",
+    "json-server": "^0.16.3",
     "less": "^3.13.1",
     "less-loader": "^7.3.0",
     "mini-css-extract-plugin": "^0.11.3",
@@ -39,6 +40,11 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-brands-svg-icons": "^5.15.2",
+    "@fortawesome/free-regular-svg-icons": "^5.15.2",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/styles": "^4.11.3",
@@ -48,6 +54,7 @@
     "normalize.css": "^8.0.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-iframe": "^1.8.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "reactstrap": "^8.9.0",
