--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "START_SET",
   "private": "true",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --mode development | json-server --watch db/dataBase.json",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --mode development | json-server --watch db/dataBase.json --host 192.168.100.4",
     "build": "cross-env NODE_ENV=production webpack --mode production"
   },
   "browserslist": ">0.25%, not dead",
@@ -47,13 +47,16 @@
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "@material-ui/styles": "^4.11.3",
     "bootstrap": "^4.6.0",
     "fontsource-roboto": "^4.0.0",
     "jquery": "^3.5.1",
     "normalize.css": "^8.0.1",
+    "prop-types": "^15.7.2",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-favicon": "0.0.18",
     "react-iframe": "^1.8.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
