--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "private": "true",
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --mode development | json-server --watch db/dataBase.json --host 192.168.100.4",
-    "build": "cross-env NODE_ENV=production webpack --mode production"
+    "build": "cross-env NODE_ENV=production webpack --mode production",
+    "db":"json-server --watch db/dataBase.json --host 192.168.100.4"
   },
   "browserslist": ">0.25%, not dead",
   "author": "",
